compilateurDeca/src/test/deca/context/invalid/objet/comparaison/objet_cmp_obj.deca
// Description:
//    Test de contexte : comparaison > entre un objet et un objet
//
// Resultats:
//    Erreur contextuelle
//
// Historique:
//    cree le 13/01/2026

class A {}
class B {}
{
    A a = new A();
    B b = new B();
    if (a > b) {
    }
}
